# CafeFausse

./: DOCKER_README.md  README.md  docker-compose.azure.yml  docker-compose.dev.yml  docker-compose.yml
api/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
api/src/: app.py  config.py  models.py  routes.py
api/tests/: conftest.py  test_models.py  test_routes.py
ui/: .gitignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/__tests__/: AboutUs.test.tsx  Gallery.test.tsx  Home.test.tsx  Menu.test.tsx  MenuItem.test.tsx  Navbar.test.tsx  ReservationForm.test.tsx
ui/src/__tests__/mocks/: framer-motion.ts
ui/src/components/: AwardCard.tsx  Footer.tsx  ImageGallery.tsx  MenuItem.tsx  Navbar.tsx  NewsletterSignup.tsx  PageTransition.tsx  ReservationForm.tsx  ReviewCard.tsx
ui/src/pages/: AboutUs.tsx  Gallery.tsx  Home.tsx  Menu.tsx  NotFound.tsx  Reservation.tsx
ui/src/test/: setup.ts  utils.tsx
ui/src/types/: award.ts  menuItem.ts  reservationFormData.ts  review.ts
