[project]
name = "api"
version = "0.1.0"
description = "A flask backend api to support user registration for hotel bookings at different slots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy-utils>=0.41.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.3.0",
]
